cmake_minimum_required(VERSION 3.28)
project(Leet)

set(CMAKE_CXX_STANDARD 20)

# Add subdirectories for each problem
add_subdirectory("1_TwoSum")
add_subdirectory("2_AddTwoNumbers")
add_subdirectory("3_LongestSubNoRepeat")
add_subdirectory("4_MedianTwoSortedArr")
add_subdirectory("5_LongestPalindromeSubstring")
add_subdirectory("6_ZigzagConversion")
add_subdirectory("7_ReverseInteger")
add_subdirectory("8_StringToInteger")
add_subdirectory("9_PalindromeNumber")
add_subdirectory("10_RegularExpressionMatching")
add_subdirectory("121_BestTimeToBuyAndSell")
add_subdirectory("150_EvaluateReversePolishNotation")
add_subdirectory("217_ContainsDuplicate")
add_subdirectory("238_ProductOfArrayExceptSelf")